--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,8 @@ material3 = "1.4.0"
 foundationLayout = "1.9.2"
 foundation = "1.9.3"
 ui = "1.9.3"
+benchmarkTraceprocessor = "1.4.1"
+benchmarkTraceprocessorJvm = "1.4.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -33,6 +35,8 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3",
 androidx-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout", version.ref = "foundationLayout" }
 androidx-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundation" }
 androidx-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "ui" }
+androidx-benchmark-traceprocessor = { group = "androidx.benchmark", name = "benchmark-traceprocessor", version.ref = "benchmarkTraceprocessor" }
+androidx-benchmark-traceprocessor-jvm = { group = "androidx.benchmark", name = "benchmark-traceprocessor-jvm", version.ref = "benchmarkTraceprocessorJvm" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
