--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,25 +1,26 @@
 
 [versions]
-agp = "8.4.1" # Usamos una versión estable y compatible con tus otras dependencias
-kotlin = "2.0.0" # Alineado con la versión del plugin de Compose
-ksp = "2.0.0-1.0.21" # Compatible con Kotlin 2.0.0
+agp = "8.13.0"
+kotlin = "2.0.20"
+ksp = "2.0.20-1.0.24"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
 material = "1.12.0"
-activity = "1.9.0"
-constraintlayout = "2.1.4"
+activity = "1.9.2"
+composeBom = "2024.09.02"
+composeCompiler = "1.5.15"
+lifecycle = "2.8.6"
+navigation = "2.8.3"
 room = "2.6.1"
-lifecycle = "2.8.3"
-navigation = "2.7.7"
-composeBom = "2024.06.00"
-coil = "2.6.0"
 datastore = "1.1.1"
-biometric = "1.2.0-alpha05" # O la versión estable que prefieras como 1.1.0
-fragmentKtx = "1.8.1"
-
+biometric = "1.1.0"
+fragmentKtx = "1.8.3"
+coil = "2.6.0"
+coroutines = "1.8.1"
+media3 = "1.4.1"
 
 [libraries]
 # Core & Appcompat
@@ -27,7 +28,7 @@ androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = 
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
-# Compose (usando Bill of Materials - BOM)
+# Compose (using the BOM for aligned versions)
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity" }
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
@@ -36,6 +37,9 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
+androidx-foundation = { group = "androidx.compose.foundation", name = "foundation" }
+androidx-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout" }
+androidx-runtime = { group = "androidx.compose.runtime", name = "runtime" }
 
 # Navigation
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
@@ -43,6 +47,7 @@ androidx-navigation-compose = { group = "androidx.navigation", name = "navigatio
 # Lifecycle & Coroutines
 androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
+kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
 
 # Room
 androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
@@ -55,13 +60,13 @@ androidx-datastore-preferences = { group = "androidx.datastore", name = "datasto
 androidx-biometric = { group = "androidx.biometric", name = "biometric", version.ref = "biometric" }
 androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragmentKtx" }
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
+androidx-media3-common = { group = "androidx.media3", name = "media3-common", version.ref = "media3" }
 
 # Testing
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
